# switchbot-scheduler

./: .env.example  .gitignore  CLAUDE.md  devices.yaml  pyproject.toml  roborock_rooms.yaml  roborock_rooms.yaml.example  start.sh
collector/: package-lock.json  package.json  scrape_discount.js
docs/: ROADMAP.md
docs/architecture/: shopping-list.md
docs/epics/: epic-1-agent-core.md
scripts/: roborock_discover.py  roborock_login.py
spikes/: FINDINGS.md  battery_spike.py  ble_spike.py
src/home_agent/: CLAUDE.md  __init__.py  __main__.py  agent.py  calendar_pending.py  cloud_scheduler.py  config.py  facts.py  finance.py  finance_store.py  gcal.py  home.py  memory.py  prompts.py  roborock.py  roborock_rooms.py  schedule_store.py  schedules.py  shopping.py  shopping_store.py  switchbot_cloud.py  telegram_app.py  tools.py
src/switchbot_scheduler/: __init__.py  actuator.py  ble_writer.py  cli.py  config.py  core.py  encoder.py  model.py  parser.py  readback.py  registry.py  validator.py
tests/: test_actuator.py  test_ble_writer.py  test_cli.py  test_config.py  test_core.py  test_encoder.py  test_model.py  test_parser.py  test_parser_conversation.py  test_press_mode.py  test_readback.py  test_registry.py  test_sanity.py  test_validator.py  test_web.py
tests/fixtures/: parser_living_room.json
tests/home_agent/: conftest.py  finance_fakes.py  roborock_fakes.py  test_build_application_cloud.py  test_calendar_pending.py  test_cloud_scheduler.py  test_config_cloud.py  test_facts_store.py  test_finance_config.py  test_finance_import.py  test_finance_store.py  (+23 more)
(+31 files in other folders)
