[project]
name = "switchbot-scheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["openai>=1.0", "bleak>=0.21", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
switchbot-schedule = "switchbot_scheduler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
