[project]
name = "switchbot-scheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["openai>=1.0", "bleak>=0.21", "PyYAML>=6.0", "fastapi>=0.110", "uvicorn>=0.29", "python-dotenv>=1.0", "python-telegram-bot>=21.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
switchbot-schedule = "switchbot_scheduler.cli:main"
switchbot-ui = "switchbot_scheduler.web.app:main"
home-agent = "home_agent.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
